# Refait-AC

./: .gitignore  BETA_TEST_CHECKLIST.md  CHANGELOG.md  README.md  build.bat  install_script.iss  package-lock.json  package.json  pyproject.toml  release.py  settings.json
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  backend.ts  index.css
refait_ac/: __main__.py  api.py
refait_ac/core/: engine.py  input_manager.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  storage.rs
src-tauri/src/engine/: clicker.rs  config.rs  hotkeys.rs  mod.rs  win_input.rs
