[package]
name = "refait-ac-tauri"
version = "0.1.0"
description = "Refait AC Tauri shell"
authors = ["Refait"]
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
ureq = { version = "2", default-features = true, features = ["json"] }
url = "2"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_UI_Input_KeyboardAndMouse"] }
